fix: apply font family and prevent zooming on ios

--- a/src/assets/styles/scss/global/select.scss
+++ b/src/assets/styles/scss/global/select.scss
@@ -16,6 +16,8 @@
     padding: s(2) s(3);
     padding-right: s(3) * 1.5 + 1rem;
     @include text-color;
+    font-family: $ui-font;
+    @include input-text;
   }
 
   &::after {
